fase inicial testes backend

--- a/Agilean/appsettings.json
+++ b/Agilean/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=agilean.db"
+    "DefaultConnection": "Data Source=C:\\Users\\thale\\source\\repos\\Agilean\\Agilean\\agilean.db"
   },
   "Logging": {
     "LogLevel": {
